--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.8
-yarn_mappings=1.21.8+build.1
-loader_version=0.17.2
-loom_version=1.11-SNAPSHOT
+minecraft_version=1.21.11
+yarn_mappings=1.21.11+build.4
+loader_version=0.18.4
+loom_version=1.15-SNAPSHOT
 
 # Mod Properties
-mod_version=0.2.4
+mod_version=0.2.5+1.21.11
 maven_group=de.nexusrealms
 archives_base_name=tenreg
 
 # Dependencies
-fabric_version=0.132.0+1.21.8
+fabric_version=0.141.3+1.21.11
